--- a/app/src/main/res/layout/comic_cell.xml
+++ b/app/src/main/res/layout/comic_cell.xml
@@ -1,35 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
         <variable
             name="comic"
             type="com.project.djoum.discovercomics.model.comics.Comics" />
+
+        <variable
+            name="iMainActivity"
+            type="com.project.djoum.discovercomics.IMainActivity" />
     </data>
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+    <android.support.v7.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_margin="4dp"
-        android:orientation="vertical">
+        android:elevation="4dp"
+        android:onClick="@{()->iMainActivity.comicDetails(comic)}"
+        app:cardCornerRadius="4dp">
 
-        <ImageView
-            android:id="@+id/comic_image"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:src="@drawable/standard_fantastic" />
-
-        <TextView
-            android:id="@+id/comic_title"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="sans-serif"
-            android:gravity="center"
-            android:text="@{comic.getTitle()}"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:textStyle="bold"
-            tools:text="Amazing Spider-Man Annual (2018)" />
-    </LinearLayout>
+            android:layout_height="match_parent"
+            android:padding="4dp"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/comic_image"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:contentDescription="@string/logo"
+                android:src="@drawable/comic1_sample"
+                app:imageUrl="@{comic.getThumbnail().toString}" />
+
+            <TextView
+                android:id="@+id/comic_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif"
+                android:gravity="center"
+                android:text="@{comic.getTitle()}"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textStyle="bold"
+                android:textColor="@color/blue1"
+                tools:text="@string/sample_text_for_list" />
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
 </layout>
