--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -2,9 +2,7 @@
 <layout xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-
         <import type="java.util.List" />
-
         <import type="com.project.djoum.discovercomics.model.comics.Comics" />
 
         <variable
@@ -27,7 +25,7 @@
                 android:id="@+id/main_list"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:comicsList="@{comics}"></android.support.v7.widget.RecyclerView>
+                app:comicsList="@{comics}" />
         </android.support.v4.widget.SwipeRefreshLayout>
     </RelativeLayout>
 </layout>
